objects/MaxOrderLine__c.object
<CustomObject>
    <label>MaxOrderLine</label>
    <nameField>
        <displayFormat>MaxOrdLine {0000}</displayFormat>
        <label>Max Order Line</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MaxOrderLines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>LineCount__c</fullName>
        <label>LineCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderTotal__c</fullName>
        <label>Order Total</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActivationReadyCount__c</fullName>
        <label>Activation Ready Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TriggerBusinessRules__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trigger Business Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExpectedActivationCount__c</fullName>
        <label>Expected Activation Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RelatedOrderActivationready__c</fullName>
        <formula>IF(AND(ExpectedActivationCount__c &gt;0,ActivationReadyCount__c&gt;0,ExpectedActivationCount__c=ActivationReadyCount__c), True, False)</formula>
        <label>Related Order Activation ready</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>